[gd_scene load_steps=17 format=2]

[ext_resource path="res://Display Scenes/BaseMap.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Buttons/Interface Buttons/Back.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Activity/Camping.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Backgrounds/NatureBG.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Buttons/Interface Buttons/BackHover.png" type="Texture" id=5]
[ext_resource path="res://CameraButtonGroup.tres" type="ButtonGroup" id=6]
[ext_resource path="res://Object Scenes/BackButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Object Scenes/InOverlay.tscn" type="PackedScene" id=8]
[ext_resource path="res://Fonts/Dynamic Fonts/Header.tres" type="DynamicFont" id=9]
[ext_resource path="res://Fonts/Dynamic Fonts/Sub Header.tres" type="DynamicFont" id=10]
[ext_resource path="res://Fonts/ProductSans-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Placeholder/9patch.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Buttons/Interface Buttons/ListenHover.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Buttons/Interface Buttons/Listen.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 11 )

[node name="CameraTest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
mapLocationButton = ExtResource( 6 )

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CamPosition" type="Sprite" parent="."]

[node name="Cam0" type="Camera2D" parent="CamPosition"]
current = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackButton" parent="CanvasLayer" instance=ExtResource( 7 )]
margin_right = 114.0
margin_bottom = 114.0
targetScene = "AreaSelect"

[node name="BackToMap" type="TextureButton" parent="CanvasLayer"]
margin_left = 50.0
margin_top = 50.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoOverlay" type="TextureRect" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -627.0
margin_top = -340.0
margin_right = -27.0
margin_bottom = 340.0
texture = ExtResource( 12 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/InfoOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/InfoOverlay/MarginContainer"]
margin_right = 550.0
margin_bottom = 630.0

[node name="Name" type="Label" parent="CanvasLayer/InfoOverlay/MarginContainer/VBoxContainer"]
margin_right = 550.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 9 )
text = "Swimming Pool"
align = 1
valign = 1

[node name="Translate" type="Label" parent="CanvasLayer/InfoOverlay/MarginContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 550.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 1 )
text = "(Kolam Renang)"
align = 1
valign = 1

[node name="Control" type="Control" parent="CanvasLayer/InfoOverlay/MarginContainer/VBoxContainer"]
margin_top = 147.0
margin_right = 550.0
margin_bottom = 167.0
rect_min_size = Vector2( 0, 20 )

[node name="Title" type="Label" parent="CanvasLayer/InfoOverlay/MarginContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 550.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 10 )
text = "Activity"
align = 1
valign = 1

[node name="ActivityPicture" type="TextureRect" parent="CanvasLayer/InfoOverlay/MarginContainer/VBoxContainer"]
margin_top = 244.0
margin_right = 550.0
margin_bottom = 514.0
rect_min_size = Vector2( 550, 270 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Activity1" type="Label" parent="CanvasLayer/InfoOverlay/MarginContainer/VBoxContainer"]
margin_top = 518.0
margin_right = 550.0
margin_bottom = 578.0
custom_fonts/font = SubResource( 1 )
text = "Swimming"
align = 1
valign = 1

[node name="Translate2" type="Label" parent="CanvasLayer/InfoOverlay/MarginContainer/VBoxContainer"]
margin_top = 582.0
margin_right = 550.0
margin_bottom = 622.0
custom_fonts/font = SubResource( 2 )
text = "Swimming"
align = 1
valign = 1

[node name="Audio" type="TextureButton" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 195.0
margin_top = -114.0
margin_right = 451.0
margin_bottom = -50.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 13 )

[node name="Title" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -451.5
margin_top = -98.0
margin_right = 451.5
margin_bottom = -19.0
custom_fonts/font = ExtResource( 9 )
text = "Select Place You Want to Visit!"

[node name="InOverlay" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="button_down" from="CanvasLayer/BackToMap" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="CanvasLayer/Audio" to="." method="_on_Audio_button_down"]
